# difussion-engine

./: .gitignore  .vercelignore  500_STUDENTS_DEPLOYMENT.md  ALGORITHM_DEEP_DIVE.md  ALGORITHM_IMPROVEMENTS_SUMMARY.md  ALGORITHM_QUICK_REFERENCE.md  API_SUMMARY.md  COMPARISON_SUMMARY.md  DEMO_SCRIPT.md  EDUCATIONAL_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_RELEASE_SUMMARY.md  HACKATHON_DEMO_SCRIPT.md  HACKATHON_PRESENTATION.md  HOW_IT_ALL_WORKS.md  HOW_TO_RUN.md  HOW_TO_RUN_CODEBASE.md  IMAGE_COMPARISON_EXPLAINED.md  LICENSE  MANIFEST.in  PUBLISHING_GUIDE.md  PUBLISHING_INSTRUCTIONS.md  QUICK_PUBLISH_GUIDE.md  RATING_SYSTEM_EXPLAINED.md  RATING_SYSTEM_SUMMARY.md  README.md  README_PACKAGE.md  RELEASE_NOTES_v2.0.md  SCALABILITY_SHOWCASE.md  STUDENT_CLI_SUMMARY.md  STUDENT_DEPLOYMENT_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  WEB_DASHBOARD_GUIDE.md  algorithm_demonstration.py  api_requirements.txt  api_server.py  basic_test.py  basic_test_session.json  challenge_game.py  cli_client.py  (+52 more)
.streamlit/: config.toml
ai_prompt_game/: __init__.py  cli.py  comparison.py  game_engine.py  utils.py
ai_prompt_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/: index.py  requirements.txt
easy_targets/: targets.json
natural_target/: descriptions.json
natural_targets/: descriptions.json
student_package/: README_STUDENTS.md  install.py  package_info.json  requirements.txt
student_package/game_files/: create_natural_targets.py  open_llm_game.py
student_package/natural_target/: descriptions.json
web_dashboard/: README.md  app.py  requirements.txt  run_dashboard.py  start_game.py  vercel_app.py
web_dashboard/templates/: dashboard.html  vercel_dashboard.html
